src/style.css
:root{
  --beige: #D3C5AE;
}

*{
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

::selection{
  background-color: #3D3145;
  color: white;
}

body{
  font-family: 'Poppins', sans-serif;
  background-color: black;
  color: var(--beige);

  cursor: url('/src/cursors/dot.svg'), auto;
}

.header{
  position: fixed;
  top: 0;
  left: 0;
  z-index: 3;
  width: 100%;
  padding: 24px 96px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--beige);
}

.header .navlist{
  display: flex;
  align-items: center;
  list-style: none;
  text-decoration: none;
  gap: 64px;
}
.header .navlist a{
  text-decoration: none;
  color: var(--beige);
  font-weight: 500;
  transition: all .3s cubic-bezier(.25, .8, .25, 1);  
}
.header .navlist a:hover{
  color: #FC8C3D;
}
.logo{
  font-size: 2rem;
  font-weight: 700;
  color: var(--beige);
  text-decoration: none;
  font-family: 'Playfair Display', serif;
}

.section{
  position: relative;
  height: 100vh;
  padding: 0 96px;
  overflow: hidden;
  overflow-x: hidden;
}

.hero{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.hero h1{
  font-size: 6rem;
  font-weight: 800;
  font-family: 'Playfair Display', serif;
}
.hero p{
  font-size: 1.2rem;
}
.hero-text{
  display: flex;
  flex-direction: column;
  align-items: center;
}
.hero-text .button{
  margin-top: 24px;
}

.button{
  display: inline-block;
  padding: 12px 32px;
  border-radius: 90px;
  color: black;
  background-color: var(--beige);
  text-decoration: none;
  font-weight: 500;
  transition: all .3s cubic-bezier(.25, .8, .25, 1);
  display: flex;
  align-items: center;
  justify-content: center;
}
.button:hover{
  background-color: #FC8C3D;
}

.disabled{
  cursor: not-allowed;
  background-color: rgba(193, 187, 176, .3);
  border: #C1BBB0 1px solid;
  color: #C1BBB0;
  opacity: .5;
}
.disabled:hover{
  background-color: rgba(193, 187, 176, .3);
}

.textfield-container{
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 16px;

  bottom: 64px;
}
.textfield-container p{
  font-size: 1.2rem;
  font-weight: 200;
  letter-spacing: 40%;
}
.hidden{
  display: none;
}
.textfield-elements{
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;

  position: relative;
}
.textfield-elements .button{
  position: absolute;
  right: 8px;
  height: 75%;
  border: none;
  cursor: pointer;
  font-size: 1rem;
}
.textfield{
  display: flex;
  align-items: center;
  padding: 12px 32px;
  border-radius: 90px;
  background: linear-gradient(25deg, #1C1C1C, #2E2E2E);
  color: var(--beige);
  border: rgba(211, 197, 174, .3) solid 1px;
  width: 512px;
  height: 3rem;

  font-size: 1rem;

  box-shadow: 
    -4px 4px 16px rgb(165, 165, 165, .1) inset,
    4px -4px 16px rgb(165, 165, 165, .1) inset,
    0 4px 30px rgba(0, 0, 0, 0.1);

  transition: all .3s cubic-bezier(.25, .8, .25, 1);
}
.textfield::placeholder{
  color: rgba(193, 187, 176, .5);;
}
.textfield:hover{
  border: rgba(211, 197, 174, 0.7) solid 1px;
}
.textfield:focus{
  border: #FC8C3D 1px solid;
  outline: none;
}

.overlay-circle{
  position: absolute;
  bottom: -100%;
  left: -25%;
  z-index: 2;
  border: #C1BBB0 1px solid;
  pointer-events: none;

  width: 150vw;
  height: 1250px;
  border-radius: 100%;

  display: block;
}

.grain-texture{
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100vw;
  height: 100vh;
  pointer-events: none;

  background-image: url('/img/GRAIN.png');
  mix-blend-mode: soft-light;
  opacity: .5;
}

.glass{
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100vw;
  height: 100vh;

  will-change: backdrop-filter;

  background-color: rgba(217, 217, 217, .1);
  backdrop-filter: blur(70px);
  -webkit-backdrop-filter: blur(70px);
  box-shadow: 
    -16px 16px 82px rgb(165, 165, 165, .1) inset,
    16px -16px 82px rgb(165, 165, 165, .1) inset,
    0 4px 30px rgba(0, 0, 0, 0.1);
}

.hero-background{
  position: absolute;
  top: 0;
  left: 0;
  z-index: -3;
  width: 100vw;
  height: 100vh;

  display: flex;
  justify-content: center;
  align-items: center;
}

.cursor-black-ball{
  position: absolute;
  width: 350px;
  height: 350px;
  border-radius: 100%;
  background-color: black;
  pointer-events: none;
  z-index: -2;
}
.circle{
  position: absolute;
  width: 630px;
  height: 630px;
  border-radius: 50%;
  background-color: #FC8C3D;
}
.gradient-ball{
  width: 600px;
  height: auto;
}

